src/objects/Stock__c.object
<CustomObject>
    <fields>
        <fullName>Exchange__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Exchange</label>
        <referenceTo>Exchange__c</referenceTo>
        <relationshipLabel>Stocks</relationshipLabel>
        <relationshipName>Stocks</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ISIN__c</fullName>
        <label>ISIN</label>
        <length>32</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Symbol__c</fullName>
        <label>Symbol</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>currency__c</fullName>
        <label>Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <label>Stock</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ISIN__c</columns>
        <columns>Symbol__c</columns>
        <columns>Exchange__c</columns>
        <columns>currency__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Stock Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stocks</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>